update in 'myapp result'

--- a/html/myapp.html
+++ b/html/myapp.html
@@ -36,8 +36,8 @@
     <p ng-show="notfound" class="alert alert-danger">Input not found</p>
     <table ng-show="showresult" class="table table-hover">
       <tr>
-        <th ng-click="orderChoosen('sbd')">SBD</td>
-        <th ng-click="orderChoosen('name')">Họ tên</th>
+        <th ng-click="orderChoosen('sbd')"><span class="glyphicon glyphicon-sort"></span>SBD</td>
+        <th ng-click="orderChoosen('name')"><span class="glyphicon glyphicon-sort"></span>Họ tên</th>
         <th>Ngày sinh</th>
         <th>Chi tiết</th>
       </tr>
